--- a/web/src/component/kanban/Kanban.module.scss
+++ b/web/src/component/kanban/Kanban.module.scss
@@ -12,7 +12,6 @@
   box-sizing: border-box;
   flex: 1;
   height: 100%;
-  overflow-y: auto;
   padding: 6px;
 
   &:nth-child(even) {
