--- a/web/src/component/kanban/Story.module.scss
+++ b/web/src/component/kanban/Story.module.scss
@@ -39,8 +39,8 @@ $border-width: 2px;
   font-family: "Source Code Pro", sans-serif;
   font-size: 16px;
   font-weight: 600;
+  height: 20px;
   margin: 0;
-  min-height: 40px;
   outline: none;
   overflow-x: hidden;
   padding: 0;
